# 01_ollama_dev

./: Ollama Gemma.ipynb  README.md  ollama_pdf_rag.ipynb  pyproject.toml
